# inventree-supplier-history-plugin

./: README.md  pyproject.toml
inventree_supplier_history_plugin/: __init__.py  supplier_history.py
tests/: test_inventree_supplier_history_plugin.py
